# obs-studio

./: buildspec.json  run-local.sh
.github/workflows/: push.yaml
build-aux/: com.obsproject.Studio.json
build-aux/modules/: 90-carla.json
cmake/Modules/: FindCarlaUtils.cmake
cmake/finders/: FindCarlaUtils.cmake
libobs/: obs-nix.c
plugins/carla/: CMakeLists.txt  carla-bridge.cpp  common.c  pluginlistdialog.cpp
